--- a/app/src/main/res/drawable/curve_background.xml
+++ b/app/src/main/res/drawable/curve_background.xml
@@ -4,7 +4,11 @@
     <item
         android:top="2px"
         android:bottom="2px">
-        <shape android:shape="oval">
+
+        <shape android:shape="rectangle">
+            <corners android:radius="8dp"/>
+            <stroke android:width="2dp"
+                android:color="@color/teal_700"/>
             <solid android:color="@color/white"/>
         </shape>
     </item>
