--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,30 +9,45 @@
         android:id="@+id/nav_home"
         android:name="com.example.chaqmoq.ui.home.HomeFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home"/>
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.example.chaqmoq.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:id="@+id/incoming_call"
+        android:name="com.example.chaqmoq.ui.incomingCall.IncomingCallFragment"
+        android:label="incoming_call"
+        tools:layout="@layout/incoming_call" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.example.chaqmoq.ui.targetUser.TargetUserFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_call"
+        android:name="com.example.chaqmoq.ui.callWindow.CallWindowFragment"
+        android:label="call window"
+        tools:layout="@layout/call_window">
+    </fragment>
 
     <fragment
         android:id="@+id/target_user"
         android:name="com.example.chaqmoq.ui.targetUser.TargetUserFragment"
         android:label="Target User"
-        tools:layout="@layout/target_user" />
+        tools:layout="@layout/target_user">
+        <action
+            android:id="@+id/to_nav_call"
+            app:destination="@+id/nav_call">
+            <argument
+                android:name="incoming"
+                app:argType="boolean" />
+            <argument
+                android:name="callType"
+                app:argType="string" />
+        </action>
+    </fragment>
+    <fragment
+        android:id="@+id/test_fragment"
+        android:name="com.example.chaqmoq.ui.testFragment.TestFragment"
+        android:label="Test Fragment"
+        tools:layout="@layout/test_fragment" />
     <activity
         android:id="@+id/login_activity"
         android:name="com.example.chaqmoq.LoginActivity"
         android:label="Login"
         tools:layout="@layout/activity_login" />
-
-
 </navigation>
