--- a/app/src/main/res/layout/call_window.xml
+++ b/app/src/main/res/layout/call_window.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:keepScreenOn="true">
@@ -9,6 +8,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="gone"
         android:id="@+id/ongoingCall">
         <LinearLayout
             android:id="@+id/callInfo"
@@ -56,7 +56,7 @@
                 android:padding="8dp"
                 android:background="@drawable/circle_background"
                 app:backgroundTint="@color/cardview_dark_background"
-                app:srcCompat="@drawable/ic_baseline_speaker_up_24" />
+                app:srcCompat="@drawable/speaker_on" />
             <ImageView
                 android:id="@+id/mute_button"
                 android:layout_width="wrap_content"
@@ -157,6 +157,9 @@
                 android:clickable="true"
                 android:focusable="true"
                 android:padding="8dp"
+                android:minWidth="48dp"
+                android:minHeight="48dp"
+                android:contentDescription="nothing"
                 android:background="@drawable/circle_background"
                 app:backgroundTint="@color/cardview_dark_background"
                 app:srcCompat="@drawable/ic_baseline_mic_24" />
@@ -168,9 +171,22 @@
                 android:clickable="true"
                 android:focusable="true"
                 android:padding="8dp"
+                android:minWidth="48dp"
+                android:minHeight="48dp"
+                android:contentDescription="nothing"
                 android:background="@drawable/circle_background"
                 app:backgroundTint="@color/cardview_dark_background"
                 app:srcCompat="@drawable/ic_baseline_videocam_24" />
+<!--            <ImageButton-->
+<!--                android:id="@+id/video_button"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:src="@drawable/ic_baseline_videocam_24"-->
+<!--                android:background="@drawable/circle_background"-->
+<!--                android:minWidth="48dp"-->
+<!--                android:minHeight="48dp"-->
+<!--                android:contentDescription="no speakable text"-->
+<!--                app:backgroundTint="@color/cardview_dark_background"/>-->
             <ImageView
                 android:id="@+id/end_call_button"
                 android:layout_width="wrap_content"
@@ -179,6 +195,9 @@
                 android:clickable="true"
                 android:focusable="true"
                 android:padding="8dp"
+                android:minWidth="48dp"
+                android:minHeight="48dp"
+                android:contentDescription="nothing"
                 android:background="@drawable/circle_background"
                 app:backgroundTint="@android:color/holo_red_dark"
                 app:srcCompat="@drawable/ic_baseline_call_end_24" />
@@ -190,6 +209,9 @@
                 android:clickable="true"
                 android:focusable="true"
                 android:padding="8dp"
+                android:minWidth="48dp"
+                android:minHeight="48dp"
+                android:contentDescription="nothing"
                 android:background="@drawable/circle_background"
                 app:backgroundTint="@color/cardview_dark_background"
                 app:srcCompat="@drawable/ic_baseline_cameraswitch_24" />
@@ -201,12 +223,73 @@
                 android:focusable="true"
                 android:layout_margin="12dp"
                 android:padding="8dp"
+                android:minWidth="48dp"
+                android:minHeight="48dp"
+                android:contentDescription="nothing"
                 android:background="@drawable/circle_background"
                 app:backgroundTint="@color/cardview_dark_background"
-                app:srcCompat="@drawable/ic_baseline_speaker_up_24" />
+                app:srcCompat="@drawable/speaker_on" />
         </LinearLayout>
 
     </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:id="@+id/noAnswer">
+        <LinearLayout
+            android:id="@+id/callInfoInNoAnswer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="80dp"
+            android:layout_centerHorizontal="true"
+            android:orientation="vertical">
+            <ImageView
+                android:id="@+id/imageIcon"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:src="@drawable/roundimage_placeholder"/>
+            <TextView
+                android:id="@+id/userNameInNoAnswer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="25dp"
+                android:layout_gravity="center"
+                android:text="user name" />
+        </LinearLayout>
+        <LinearLayout
+            android:gravity="center"
+            android:backgroundTint="@android:color/secondary_text_light"
+            android:id="@+id/controlBtnsInNoAnswer"
+            android:orientation="horizontal"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/speakerOn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:focusable="true"
+                android:layout_margin="12dp"
+                android:padding="8dp"
+                android:background="@drawable/circle_background"
+                app:backgroundTint="@color/cardview_dark_background"
+                app:srcCompat="@drawable/speaker_on" />
+            <ImageView
+                android:id="@+id/xBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="12dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:padding="8dp"
+                android:background="@drawable/circle_background"
+                app:backgroundTint="@android:color/holo_red_dark"
+                app:srcCompat="@drawable/ic_baseline_call_end_24" />
 
+        </LinearLayout>
+    </RelativeLayout>
 
 </RelativeLayout>
