--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -1,14 +1,6 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <data>
-        <variable
-            name="message"
-            type="com.example.chaqmoq.model.Message" />
-        <variable
-            name="hostId"
-            type="String" />
-    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -17,25 +9,82 @@
 
         <LinearLayout
             android:id="@+id/messageLayout"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="8dp"
-            android:background="#2E74FF"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
-                android:id="@+id/messageText"
+            <LinearLayout
+                android:id="@+id/messageBlock"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{message.message}"
-                android:textColor="#eeF345"
-                android:textSize="18sp"/>
+                android:padding="10dp"
+                android:background="@drawable/background_send_message"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/messageText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="sample text"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"/>
+                <TextView
+                    android:id="@+id/sendTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="14:53"
+                    android:textSize="10dp"
+                    android:textColor="@color/white"
+                    android:layout_gravity="bottom"
+                    android:paddingLeft="10dp"
+                    android:alpha="0.8"
+                    />
+            </LinearLayout>
 
-            <!-- Add more views here to display additional user information -->
+            <LinearLayout
+                android:id="@+id/voiceMessageBlock"
+                android:layout_width="wrap_content"
+                android:layout_height="80dp"
+                android:padding="10dp"
+                android:background="@drawable/background_send_message"
+                android:layout_marginTop="10dp"
+                android:visibility="visible"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/play_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:src="@drawable/play_btn"
+                    android:layout_marginRight="10dp"
+                    android:layout_gravity="center_vertical"/>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <com.example.chaqmoq.ui.customViews.WaveformView
+                        android:id="@+id/waveformView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp" />
+
+                    <TextView
+                        android:id="@+id/voiceSendTime"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:alpha="0.8"
+                        android:text="14:53"
+                        android:textColor="@color/white"
+                        android:layout_gravity="end"
+                        android:textSize="10dp" />
+                </LinearLayout>
+
+            </LinearLayout>
+
         </LinearLayout>
 
 
