--- a/app/src/main/res/layout/target_user.xml
+++ b/app/src/main/res/layout/target_user.xml
@@ -11,12 +11,26 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
+        android:background="@color/whiteBlack"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         tools:ignore="MissingConstraints">
 
-        <!-- Username and last seen time -->
+        <ImageButton
+            android:id="@+id/backBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/baseline_keyboard_backspace_24"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:layout_marginEnd="7dp"
+        />
+
+        <ImageView
+            android:id="@+id/userImage"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/roundimage_placeholder" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -25,20 +39,18 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/usernameTextView"
+                android:id="@+id/username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Username"
-                android:textColor="@android:color/white"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/lastSeenTextView"
+                android:id="@+id/status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Last seen: 10 mins ago"
-                android:textColor="@android:color/white"
                 android:textSize="14sp" />
 
         </LinearLayout>
@@ -58,7 +70,7 @@
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:padding="10dp"
                 android:src="@drawable/audio_call"
-                app:tint="@android:color/white" />
+                 />
 
             <ImageButton
                 android:id="@+id/videoCallButton"
@@ -66,8 +78,7 @@
                 android:layout_height="wrap_content"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:padding="10dp"
-                android:src="@drawable/video_call"
-                app:tint="@android:color/white" />
+                android:src="@drawable/video_outline" />
 
         </LinearLayout>
 
@@ -91,7 +102,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="10dp">
 
         <EditText
             android:id="@+id/messageEditText"
@@ -103,11 +115,50 @@
             android:maxLines="3"
             android:padding="10dp" />
 
-        <Button
+        <ImageButton
             android:id="@+id/sendButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Send" />
+            android:padding="10dp"
+            android:visibility="gone"
+            android:src="@drawable/baseline_send_24"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            />
+
+
+        <ImageButton
+            android:id="@+id/voiceMsgBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:src="@drawable/voice_msg_btn" />
+
+        <FrameLayout
+            android:id="@+id/animation_circle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/voiceMsgBtn"
+            app:layout_constraintTop_toTopOf="@+id/voiceMsgBtn"
+            app:layout_constraintLeft_toLeftOf="@+id/voiceMsgBtn"
+            app:layout_constraintRight_toRightOf="@+id/voiceMsgBtn">
+
+            <View
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:background="@drawable/roundimage_placeholder" />
+
+            <ImageButton
+                android:id="@+id/icon_in_circle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:contentDescription="no description"
+                android:src="@drawable/voice_msg_btn" />
+
+        </FrameLayout>
 
     </LinearLayout>
 
