--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -1,13 +1,10 @@
 <!-- user_item.xml -->
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    >
-
-    <data>
-        <variable
-            name="user"
-            type="com.example.chaqmoq.model.User" />
-    </data>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,20 +17,34 @@
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:contentDescription="no description"
-            android:scaleType="centerCrop"
+            android:clipToOutline="true"
+            android:background="@drawable/roundimage_placeholder"
             android:layout_marginEnd="8dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/userNameTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="user name"
+                android:textSize="23sp"
+                tools:text="John Doe" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="last message"
+                android:textSize="13sp"
+                />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/userNameTextView"
-            android:layout_width="307dp"
-            android:textColorHint="@color/black"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:text="@{user.username}"
-            android:textColor="@android:color/black"
-            android:textSize="18sp"
-            tools:text="John Doe" />
-
-        <!-- Add more views here to display additional user information -->
     </LinearLayout>
-</layout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.7dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_gravity="bottom"
+        android:alpha="0.5"
+        android:background="#FFFFFF" />
+</LinearLayout>
