--- a/app/src/main/res/layout/window_call_info.xml
+++ b/app/src/main/res/layout/window_call_info.xml
@@ -4,8 +4,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    android:background="@drawable/window_background">
+    android:background="@color/white"
+    android:layout_margin="5dp">
 
 
     <LinearLayout
