--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="one">#590734</color>
+    <color name="two">#590E07</color>
+    <color name="three">#4B4A03</color>
+    <color name="whiteBlack">#322D2D</color>
 </resources>
