--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -67,7 +67,7 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                    <com.example.chaqmoq.ui.customViews.WaveformView
+                    <com.example.chaqmoq.utils.WaveformView
                         android:id="@+id/waveformView"
                         android:layout_width="wrap_content"
                         android:layout_height="40dp" />
