--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="two">#590E07</color>
     <color name="three">#4B4A03</color>
     <color name="whiteBlack">#322D2D</color>
+    <color name="background_light">#E6E6CA</color>
+    <color name="background_dark">#284C57</color>
 </resources>
