--- a/app/src/main/res/drawable/background_send_message.xml
+++ b/app/src/main/res/drawable/background_send_message.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/purple_500" />
+    <solid android:color="@color/blue" />
     <corners
-        android:bottomRightRadius="84dp"
+        android:bottomLeftRadius="84dp"
         android:topLeftRadius="84dp"
         android:topRightRadius="84dp"
         />
