--- a/app/src/main/res/drawable/circle_border.xml
+++ b/app/src/main/res/drawable/circle_border.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="@color/teal_200" />
-    <size
-        android:width="60dp"
-        android:height="60dp" />
+    <solid android:color="@android:color/transparent" />
+    <stroke android:width="1dp" android:color="@android:color/white" />
 </shape>
