--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/sign_in_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -14,30 +14,50 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:textSize="30sp"
-        android:textColor="#000000"
-        android:text="" />
+        android:textSize="60sp"
+        android:textColor="#FFFFFF"
+        android:fontFamily="@font/caros"
+        android:padding="20dp"
+        android:text="@string/big_text_of_signin" />
 
     <TextView
-        android:id="@+id/emailTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="28dp"
-        android:textSize="18sp"
-        android:text="" />
+        android:layout_margin="10dp"
+        android:padding="20dp"
+        android:textColor="@color/white"
+        android:textSize="17sp"
+        android:text="Our chat app is the perfect way to stay connected with friends and family." />
 
-    <Button
-        android:text="login"
-        android:id="@+id/loginBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:id="@+id/signinBtn"
+        android:background="@drawable/circle_border"
+        android:padding="10dp"
+        android:src="@drawable/google_icon"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
         android:layout_marginTop="20dp"/>
 
-    <Button
-        android:text="logout"
-        android:id="@+id/logoutBtn"
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="30dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Existed account?  "
+            android:textColor="@color/white"
+            />
+
+        <TextView
+            android:id="@+id/loginBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:text="Log in" />
+    </LinearLayout>
 
 </LinearLayout>
