--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -10,11 +10,13 @@
         android:id="@+id/chatToolbar"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
-        android:background="@color/purple_500"
+        android:background="?attr/colorSecondary"
         app:contentInsetEnd="20dp"
         app:contentInsetStart="20dp"
         tools:ignore="MissingConstraints"
         >
+
+
 
         <ImageButton
             android:id="@+id/searchBtn"
@@ -29,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorPrimary"
             android:textSize="25sp"
             android:text="Chat" />
 
@@ -42,28 +44,46 @@
 
     </androidx.appcompat.widget.Toolbar>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.7dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/chatToolbar"
+        android:alpha="0.5"
+        android:background="?attr/colorPrimary" />
 
-    <ImageButton
-        android:id="@+id/reload_btn"
+    <ProgressBar
+        android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:indeterminateTint="?attr/colorPrimary"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:src="@drawable/reload"
-        android:elevation="8dp"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
-        android:layout_margin="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/chatToolbar"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_height="0dp"
-        android:paddingHorizontal="10dp"
-        tools:listitem="@layout/user_item"
-        android:elevation="1dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/chatToolbar"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_margin="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/chatToolbar"
+            android:layout_height="0dp"
+            android:paddingHorizontal="10dp"
+            tools:listitem="@layout/user_item"
+            android:elevation="1dp"/>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
