--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -22,14 +22,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
-                android:background="@drawable/background_send_message"
+                android:background="@drawable/background_receive_message"
                 android:orientation="horizontal">
                 <TextView
                     android:id="@+id/messageText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="sample text"
-                    android:textColor="@color/white"
+                    android:textColor="?attr/colorPrimary"
                     android:textSize="18sp"/>
                 <TextView
                     android:id="@+id/sendTime"
@@ -37,7 +37,7 @@
                     android:layout_height="wrap_content"
                     android:text="14:53"
                     android:textSize="10dp"
-                    android:textColor="@color/white"
+                    android:textColor="?attr/colorPrimary"
                     android:layout_gravity="bottom"
                     android:paddingLeft="10dp"
                     android:alpha="0.8"
@@ -49,7 +49,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:padding="10dp"
-                android:background="@drawable/background_receive_message"
+                android:background="@drawable/background_send_message"
                 android:layout_marginTop="10dp"
                 android:visibility="visible"
                 android:orientation="horizontal">
@@ -82,7 +82,8 @@
                     <com.example.chaqmoq.utils.WaveformView
                         android:id="@+id/waveformView"
                         android:layout_width="wrap_content"
-                        android:layout_height="40dp" />
+                        android:layout_height="40dp"
+                        android:padding="5dp"/>
 
                     <TextView
                         android:id="@+id/voiceSendTime"
@@ -90,10 +91,57 @@
                         android:layout_height="wrap_content"
                         android:alpha="0.8"
                         android:text="14:53"
-                        android:textColor="@color/white"
+                        android:textColor="?attr/colorPrimary"
                         android:layout_gravity="end"
                         android:textSize="10dp" />
                 </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/fileMessageBlock"
+                android:layout_width="wrap_content"
+                android:layout_height="80dp"
+                android:minWidth="200dp"
+                android:padding="10dp"
+                android:background="@drawable/background_send_message"
+                android:layout_marginTop="10dp"
+                android:visibility="gone"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/downloadBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/file_download"
+                    android:layout_gravity="center_vertical"
+                    android:background="?attr/selectableItemBackgroundBorderless" />
+
+                <FrameLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/fileName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:textSize="16dp"
+                        android:textColor="?attr/colorPrimary"
+                        android:layout_margin="5dp"
+                        android:text="my-file.txt" />
+
+                    <TextView
+                        android:id="@+id/fileSentTime"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom|end"
+                        android:alpha="0.8"
+                        android:text="14:53"
+                        android:textColor="?attr/colorPrimary"
+                        android:textSize="10dp" />
+                </FrameLayout>
 
             </LinearLayout>
 
