--- a/app/src/main/res/layout/target_user.xml
+++ b/app/src/main/res/layout/target_user.xml
@@ -11,8 +11,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/whiteBlack"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         tools:ignore="MissingConstraints">
 
@@ -22,7 +21,7 @@
             android:layout_height="wrap_content"
             android:src="@drawable/baseline_keyboard_backspace_24"
             android:background="?attr/selectableItemBackgroundBorderless"
-            android:layout_marginEnd="7dp"
+            android:layout_marginEnd="15dp"
         />
 
         <ImageView
@@ -43,7 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Username"
-                android:textColor="@color/white"
+                android:textColor="?attr/colorPrimary"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -51,7 +50,7 @@
                 android:id="@+id/status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
+                android:textColor="?attr/colorPrimary"
                 android:text="Last seen: 10 mins ago"
                 android:textSize="14sp" />
 
@@ -86,27 +85,70 @@
 
     </androidx.appcompat.widget.Toolbar>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.7dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        android:alpha="0.5"
+        android:background="?attr/colorPrimary" />
     <!-- Messages RecyclerView -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        tools:listitem="@layout/message_item"
-        android:paddingHorizontal="10dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@id/messageInputLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            tools:listitem="@layout/message_item"
+            android:paddingHorizontal="10dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toTopOf="@id/messageInputLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/toolbar" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <!-- Message input layout -->
     <LinearLayout
         android:id="@+id/messageInputLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_margin="10dp">
+
+
+        <ImageButton
+            android:id="@+id/sendFileBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/attach_file"
+            android:padding="10dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            />
 
         <EditText
             android:id="@+id/messageEditText"
@@ -134,35 +176,34 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
+            android:visibility="visible"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:src="@drawable/voice_msg_btn" />
 
-        <FrameLayout
-            android:id="@+id/animation_circle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@+id/voiceMsgBtn"
-            app:layout_constraintTop_toTopOf="@+id/voiceMsgBtn"
-            app:layout_constraintLeft_toLeftOf="@+id/voiceMsgBtn"
-            app:layout_constraintRight_toRightOf="@+id/voiceMsgBtn">
-
-            <View
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:background="@drawable/roundimage_placeholder" />
-
-            <ImageButton
-                android:id="@+id/icon_in_circle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:contentDescription="no description"
-                android:src="@drawable/voice_msg_btn" />
-
-        </FrameLayout>
-
     </LinearLayout>
+    <FrameLayout
+        android:id="@+id/animation_circle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="5dp"
+        android:layout_marginRight="5dp"
+        android:background="@drawable/roundimage_placeholder"
+        />
+    <ImageButton
+        android:id="@+id/icon_in_circle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:contentDescription="no description"
+        android:src="@drawable/voice_msg_btn"
+        android:layout_marginBottom="18dp"
+        android:layout_marginRight="18dp"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
