--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.example.chaqmoq.ui.home.HomeFragment"
+        android:name="com.example.chaqmoq.ui.chat.ChatFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home"/>
+        tools:layout="@layout/fragment_chat"/>
     <fragment
         android:id="@+id/nav_call"
         android:name="com.example.chaqmoq.ui.callWindow.CallWindowFragment"
@@ -39,12 +39,12 @@
     </fragment>
     <fragment
         android:id="@+id/nav_calls"
-        android:name="com.example.chaqmoq.ui.callsFragment.CallsFragment"
+        android:name="com.example.chaqmoq.ui.calls.CallsFragment"
         android:label="Calls Fragment"
         tools:layout="@layout/calls_fragment" />
     <activity
         android:id="@+id/login_activity"
-        android:name="com.example.chaqmoq.LoginActivity"
+        android:name="com.example.chaqmoq.AuthorizationActivity"
         android:label="Login"
         tools:layout="@layout/activity_login" />
     <activity
