--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
+    <color name="blue">#2491C6</color>
+    <color name="gray">#C4C4C4</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
@@ -13,4 +15,6 @@
     <color name="whiteBlack">#322D2D</color>
     <color name="background_light">#E6E6CA</color>
     <color name="background_dark">#284C57</color>
+    <color name="dark">#262628</color>
+    <color name="light">#E1E3E4</color>
 </resources>
